
	- Added another patch by Rene Hogendoorn.
	- Fixed error messages in pgc.l.
	- Improved variable parsing.
	- Synced preproc.y with gram.y.

Mon Feb 14 10:35:18 CET 2000

	- Synced preproc.y with gram.y.

Tue Feb 15 11:14:07 CET 2000

	- Synced keyword.c.
	- Synced preproc.y with gram.y.

Tue Feb 15 17:39:19 CET 2000

	- Do only write the first 70 bytes of the error message to the 
	  sqlca structure since there are only 70 bytes free space.
	- Set library version to 3.0.10.

Wed Feb 16 11:57:02 CET 2000

	- Fixed library to be able to input complete arrays.

Wed Feb 16 17:04:41 CET 2000

	- Apply patch by Christof Petig <christof.petig@wtal.de> that adds
	  descriptors.

Thu Feb 17 19:37:44 CET 2000

	- Synced preproc.y with gram.y.
	- Started to clean up preproc.y.

Tue Feb 22 13:48:18 CET 2000

	- Synced preproc.y with gram.y.
	- Much more clean ups.

Wed Feb 23 17:08:28 CET 2000

	- Even more clean ups.

Fri Feb 25 16:13:11 CET 2000

	- Fixed some bugs I created when I cleaned up, thanks Christof.

Wed Mar  1 10:49:03 CET 2000

	- Synced preproc.y with gram.y.
	- Added output of arrays.

Thu Mar  2 11:25:09 CET 2000

	- Fixed some parsing problems. A variable can now be a reserved
	  SQL keyword.
	- Made sure double quotes in statements are correctly quoted.

Thu Mar  2 17:42:16 CET 2000

	- Print error message if an indicator array is given for input
	  variables.

Fri Mar  3 10:47:06 CET 2000

	- Fixed handling of double quote in C code.

Tue Mar  7 10:58:21 CET 2000

	- More cleanup in ecpglib.
	- Fixed ecpg.c not not free variable list twice.

Thu Mar  9 10:12:57 CET 2000

	- Fixed another memory bug in the parser.

Wed Mar 15 17:36:02 CET 2000

	- Synced preproc.y with gram.y.
	- Synced pgc.l with scan.l.
	- Synced keyword.c.

Sun Mar 19 11:03:13 CET 2000

	- Fixed quoting bug in disconnect statement.

Thu Mar 23 08:13:39 CET 2000

	- Synced preproc.y and keyword.c.
	- Set library version to 3.1.0.
	- Set ecpg version to 2.7.0.